--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@
 :root {
   --color-default: #222222;
   --color-primary: #008374;
-  --color-secondary: #f85a40;
+  --color-secondary: #FFCB42;
 }
 
 /* Smooth scroll behavior */
@@ -621,6 +621,10 @@ section {
   font-size: 28px;
   margin-bottom: 20px;
   font-family: var(--font-secondary);
+}
+
+.about p {
+  text-align: left;
 }
 
 .about .call-us {
@@ -1914,6 +1918,7 @@ section {
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
+  height: 100vh;
   position: relative;
   background: var(--color-primary);
   padding: 60px 0 0 0;
@@ -1926,7 +1931,7 @@ section {
 }
 
 .hero h2 {
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 700;
   margin-bottom: 20px;
   color: #fff;
