--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1707,7 +1707,7 @@ section {
 
 .contact .info-item {
   width: 100%;
-  background-color: #009282;
+  background-color: rgba(75, 78, 230, 0.705);
   margin-bottom: 20px;
   padding: 20px;
   border-radius: 10px;
@@ -1745,6 +1745,11 @@ section {
   margin-bottom: 0;
   font-size: 14px;
 }
+
+.contact .info-item a {
+  color: #ffffff;
+}
+
 
 .contact .info-item:hover i {
   background: #fff;
