--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -559,6 +559,7 @@ section {
 /*--------------------------------------------------------------
 # About Us Section
 --------------------------------------------------------------*/
+
 .about h3 {
   font-weight: 700;
   font-size: 28px;
@@ -1649,6 +1650,10 @@ section {
   overflow: hidden;
 }
 
+.recent-posts h3 {
+  font-size: 16px;
+}
+
 .recent-posts .post-img {
   max-height: 240px;
   margin: -30px -30px 15px -30px;
@@ -1707,11 +1712,11 @@ section {
 
 .contact .info-item {
   width: 100%;
-  background-color: rgba(75, 78, 230, 0.705);
+  border: 1px solid #293462;
   margin-bottom: 20px;
   padding: 20px;
   border-radius: 10px;
-  color: #fff;
+  color: #293462;
 }
 
 .contact .info-item:last-child {
@@ -1720,7 +1725,7 @@ section {
 
 .contact .info-item i {
   font-size: 20px;
-  color: #fff;
+  color: var(--color-primary);
   float: left;
   width: 44px;
   height: 44px;
@@ -1744,10 +1749,11 @@ section {
   padding: 0;
   margin-bottom: 0;
   font-size: 14px;
+  color: #1f90fa;
 }
 
 .contact .info-item a {
-  color: #ffffff;
+  color: var(--color-primary);
 }
 
 
