--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,7 +64,6 @@ section {
 .section-header h2 {
   font-size: 32px;
   font-weight: 600;
-  margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
 }
@@ -191,7 +190,7 @@ section {
 # Header
 --------------------------------------------------------------*/
 .topbar {
-  background: #222e5c;
+  background-color: #5753C9;
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
@@ -244,7 +243,7 @@ section {
   transition: all 0.5s;
   z-index: 997;
   height: 70px;
-  background-color: var(--color-primary);
+  background-image: linear-gradient(90deg, #3D4E81 0%, #5753C9 70%, #6E7FF3 100%);
 }
 
 .header.sticked {
@@ -313,8 +312,9 @@ section {
     align-items: center;
     justify-content: space-between;
     padding: 0 3px;
-    font-family: var(--font-secondary);
-    font-size: 16px;
+    font-family: var(--font-primary);
+    font-size: 15px;
+    font-weight: 600;
     color: rgba(255, 255, 255, 0.6);
     white-space: nowrap;
     transition: 0.3s;
@@ -570,6 +570,10 @@ section {
   text-align: left;
 }
 
+.about p span {
+  font-weight: bold;
+}
+
 .about .call-us {
   left: 10%;
   right: 10%;
@@ -768,6 +772,7 @@ section {
 .stats-counter .stats-item .purecounter {
   min-width: 90px;
   padding-right: 15px;
+  text-align: center;
 }
 
 .stats-counter .stats-item i {
@@ -1879,7 +1884,7 @@ section {
   width: 100%;
   height: 90vh;
   position: relative;
-  background: var(--color-primary);
+  background-image: linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 100%);
   padding: 10px 0 0 0;
 }
 
