--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,8 @@
 /* Colors */
 :root {
   --color-default: #222222;
-  --color-primary: #293462;
-  --color-secondary: #FFCB42;
+  --color-primary: #526EC2;
+  --color-secondary: #16df7e;
 }
 
 /* Smooth scroll behavior */
@@ -154,6 +154,7 @@ section {
   bottom: -15px;
   z-index: 999;
   background: var(--color-secondary);
+  box-shadow: 0 8px 28px rgb(22 223 126 / 45%);
   width: 44px;
   height: 44px;
   border-radius: 50px;
@@ -167,7 +168,7 @@ section {
 }
 
 .scroll-top:hover {
-  background: rgba(248, 90, 64, 0.8);
+  background: rgba(64, 248, 110, 0.8);
   color: #fff;
 }
 
@@ -190,7 +191,7 @@ section {
 # Header
 --------------------------------------------------------------*/
 .topbar {
-  background-color: #5753C9;
+  background-color: var(--color-primary);
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
@@ -243,7 +244,7 @@ section {
   transition: all 0.5s;
   z-index: 997;
   height: 70px;
-  background-image: linear-gradient(90deg, #3D4E81 0%, #5753C9 70%, #6E7FF3 100%);
+  background-color: var(--color-primary);
 }
 
 .header.sticked {
@@ -900,13 +901,14 @@ section {
   border-radius: 50px;
   transition: 0.5s;
   margin: 10px;
-  border: 2px solid #fff;
+  border: 2px solid #16df7e;
   color: #fff;
+  background-color: var(--color-secondary);
 }
 
 .call-to-action .cta-btn:hover {
-  background: var(--color-primary);
-  border: 2px solid var(--color-primary);
+  background: #38ff9f;
+  border: 2px solid #38ff9f;
 }
 
 @keyframes pulsate-btn {
@@ -1884,7 +1886,9 @@ section {
   width: 100%;
   height: 90vh;
   position: relative;
-  background-image: linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 100%);
+  background-color: var(--color-primary);
+  /*background-color: #3d4e81;
+  background-image: linear-gradient(90deg, #3d4e81 0%, #5753c9 50%, #6e7ff3 100%);*/
   padding: 10px 0 0 0;
 }
 
@@ -1926,7 +1930,7 @@ section {
 
 
 .hero p {
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.945);
   font-weight: 400;
   margin-bottom: 30px;
 }
@@ -1941,8 +1945,8 @@ section {
   border-radius: 50px;
   transition: 0.3s;
   color: #fff;
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
+  background: #16df7e;
+  box-shadow: 0 8px 28px rgb(22 223 126 / 45%);
   border: 2px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -1959,7 +1963,7 @@ section {
 }
 
 .hero .btn-watch-video i {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgb(255, 255, 255);
   font-size: 32px;
   transition: 0.3s;
   line-height: 0;
@@ -1979,7 +1983,7 @@ section {
 @media (max-width: 640px) {
   .hero h1 {
     font-size: 28px;
-    text-align: left;
+    text-align: center;
   }
 
   .hero .btn-get-started,
