blog and data-aos added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1670,7 +1670,7 @@ section {
   }
 
   to {
-    text-shadow: 0 0 2px #f2fa82, 0 0 2px #f2fa82, 0 0 2px #f2fa82, 0 0 2px #f2fa82, 0 0 2px #f2fa82, 0 0 2px #f2fa82, 0 0 2px #f2fa82;
+    text-shadow: 0 0 2px #87eee9, 0 0 2px #87eee9, 0 0 2px #87eee9, 0 0 2px #87eee9, 0 0 2px #87eee9, 0 0 2px #87eee9, 0 0 2px #87eee9;
   }
 }
 
